samples/_failures_safe/1761421212_738b24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7221371e.c: In function ‘main’:
./samples/SAFE/__tmp_7221371e.c:158:25: error: missing terminating " character
  158 |         fprintf(stderr, "Failed
      |                         ^~~~~~~
./samples/SAFE/__tmp_7221371e.c:158:9: error: expected expression at end of input
  158 |         fprintf(stderr, "Failed
      |         ^~~~~~~
./samples/SAFE/__tmp_7221371e.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7221371e.c:158:9: error: expected declaration or statement at end of input
